.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
02:23:30 **** Incremental Build of configuration Debug for project Lab3 ****
make all 
Building file: ../Sources/main.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -O0 -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections  -g3 -I"../Sources" -I"../Includes" -std=c99 -MMD -MP -MF"Sources/main.d" -MT"Sources/main.o" -c -o "Sources/main.o" "../Sources/main.c"
../Sources/main.c: In function 'main':
../Sources/main.c:40:5: error: 'PORTA_PCR2' undeclared (first use in this function)
     PORTA_PCR2 = 0x100;
     ^
../Sources/main.c:40:5: note: each undeclared identifier is reported only once for each function it appears in
Sources/subdir.mk:18: recipe for target 'Sources/main.o' failed
make: *** [Sources/main.o] Error 1
